# frappe-slack-connector

./: .editorconfig  .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  license.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-test.yml  linters.yml
frappe_slack_connector/: hooks.py  modules.txt
frappe_slack_connector/api/: attendance_summary.py  auth.py  slack_interactions.py  slash_leave.py  slash_timesheet.py  sync_slack_settings.py  test_slack_channel.py
frappe_slack_connector/db/: employee.py  leave_application.py  timesheet.py  user_meta.py
frappe_slack_connector/fixtures/: custom_field.json  property_setter.json
frappe_slack_connector/helpers/: error.py  http_response.py  standard_date.py  str_utils.py
frappe_slack_connector/override/: leave_application.py  timesheet.py
frappe_slack_connector/public/js/: user_doctype.js  user_meta.js
frappe_slack_connector/slack/: app.py
frappe_slack_connector/slack/interactions/: approve_leave.py  submit_leave.py  submit_timesheet.py  timesheet_filters.py  timesheet_modal.py
frappe_slack_connector/tasks/: attendance_summary.py  send_daily_reminder.py  test_attendance_summary.py  workload_reminder.py
slack_connector/: hooks.py  modules.txt
slack_connector/api/: attendance_summary.py  auth.py  slack_interactions.py  sync_slack_settings.py  test_slack_channel.py  user_meta.py
slack_connector/db/: employee.py  leave_application.py  user_meta.py
slack_connector/fixtures/: custom_field.json
slack_connector/helpers/: error.py  slack_app.py  slack_methods.py  user_meta.py
slack_connector/override/: leave_application.py
slack_connector/public/js/: user_doctype.js  user_meta.js
slack_connector/slack/: app.py
slack_connector/slack_connector/custom/: user_meta.json
(+13 files in other folders)
